<resources>
    <string name="app_name">LiteLife</string>
    <string name="daftar">Daftar</string>
    <string name="auth_namapengguna">Nama Pengguna</string>
    <string name="email">Email</string>
    <string name="auth_katasandi">Kata Sandi</string>
    <string name="masuk">Masuk</string>
    <string name="next">Lanjut</string>
    <string name="punya_akun">Sudah memiliki akun?</string>
    <string name="welcome">Selamat Datang di</string>
    <string name="greetings_infaccount">Masukkan informasi pribadi Anda, kami memerlukannya untuk menghitung batas kalori harian Anda</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="profile">Profil</string>
    <string name="name">Nama</string>
    <string name="menu_home">Home</string>
    <string name="menu_tracker">Tracker</string>
    <string name="menu_plans">Plans</string>
    <string name="password">Password</string>
    <string name="age">Umur</string>
    <string name="height">Tinggi Badan</string>
    <string name="weight">Berat Badan</string>
    <string name="height_home">Tinggi</string>
    <string name="weight_home">Berat</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="belumada_akun">Belum memiliki akun?</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="tracker">Tracker</string>
    <string name="plans">Plans</string>
    <string name="search_hint">Masukkan nama</string>
    <string name="food">Makanan</string>
    <string name="exercise">Olahraga</string>
    <string name="yours">Kamu</string>
    <string name="calories">Kalori</string>
    <string name="goals">Batas</string>
    <string name="consumed">Konsumsi</string>
    <string name="info_remind">Sisa = Batas - Konsumsi + Olahraga</string>
    <string name="remainder">Sisa Kalori</string>
    <string name="remain">Sisa</string>
    <string name="number_remind">1700</string>
    <string name="number_consumed">0</string>
    <string name="number_exercise">0</string>
    <string name="water">Air</string>
    <string name="fiber">Serat</string>
    <string name="sodium">Sodium</string>
    <string name="percentage_low">32%</string>
    <string name="percentage_high">90%</string>
    <string name="percentage_normal">75%</string>
    <string name="low">Rendah</string>
    <string name="normal">Cukup</string>
    <string name="high">Tinggi</string>
    <string name="rekomendasi">Rekomendasi</string>
    <string name="batas">Batas</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="morning">Pagi</string>
    <string name="afternoon">Siang</string>
    <string name="night">Malam</string>
    <string name="equal">=</string>
    <string name="age_number">21</string>
    <string name="height_number">164</string>
    <string name="weight_number">48</string>
    <string name="calories_nutrition">200 kcal</string>
    <string name="calories_today">Kalori Kamu Hari Ini</string>
    <string name="no_data">Tidak ada data</string>
    <string name="thingstotrack">Data yang ingin kamu track</string>
    <string name="time">Waktu</string>
    <string name="category">Kategori</string>
    <string name="pick">Pilih data</string>
    <string name="save">Simpan</string>
    <string name="excess">Kelebihan</string>
    <string name="consultation">Konsultasi</string>
    <string name="have_calories">Kalorimu masih tersisa</string>
    <string name="limit_calories">Kalorimu sudah melebihi batas</string>
    <string name="must_doing_exer">Kamu harus berolahraga</string>
    <string name="click_here">Klik untuk mendapatkan rekomendasi olahraga agar kalorimu seimbang</string>
    <string name="desc_food">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>

</resources>